...
) {
    val experience = carePackExperience()

    Scaffold(
        modifier = modifier
                .fillMaxSize().testTag(
                    "occurrence_detail_screen",
                ),
    ) { contentPadding ->
        Box(
            modifier = Modifier
                    .fillMaxSize().padding(contentPadding),
        ) {
...
